[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wu-mqtt-bridge"
version = "0.2.0"
description = "Weather Underground → MQTT bridge for Home Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27,<1",
    "paho-mqtt>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "click>=8.0,<9",
    "structlog>=24.0,<26",
]

[project.scripts]
wu-mqtt-bridge = "wu_mqtt_bridge.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "respx>=0.21,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3.0,<4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=wu_mqtt_bridge --cov-report=term-missing --cov-report=xml"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["wu_mqtt_bridge"]

[tool.coverage.report]
fail_under = 80
